--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hair Haven Salon</title>
   <script src= script.js></script>
+  <!--Follow <script> is directly from Facebook developer to allow for proper API-->
+  <script>
+    window.fbAsyncInit = function() {
+      FB.init({
+        appId      : '544747643478230',
+        xfbml      : true,
+        version    : 'v12.0'
+      });
+      FB.AppEvents.logPageView();
+    };
+  
+    (function(d, s, id){
+       var js, fjs = d.getElementsByTagName(s)[0];
+       if (d.getElementById(id)) {return;}
+       js = d.createElement(s); js.id = id;
+       js.src = "https://connect.facebook.net/en_US/sdk.js";
+       fjs.parentNode.insertBefore(js, fjs);
+     }(document, 'script', 'facebook-jssdk'));
+  </script>
 </head>
 <body>
   
