working on API Fetche

--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
     </div>
     <div id="#retail-div">
       <h2>RETAIL</h2>
+      <button>retail</button>
     </div>
   </main>
   <footer>
     <div id="#contactUs-div">
       <h2>CONTACT US</h2>
-      <button>CONTACT US</button>
+      <!-- <button>CONTACT US</button> -->
     </div>
   </footer>
 </body>
