--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <div id="#home-div">
       <h2>HOME</h2>
     </div>
-    <div id="#aboutMe-div">
-      <h2>ABOUT ME</h2>
+    <div id="#aboutUs-div">
+      <h2>ABOUT US</h2>
     </div>
     <div id="#ourWork-div">
       <h2>OUR WORK</h2>
