working API fetch from IG

--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
     </div>
     <div id="#retail-div">
       <h2>RETAIL</h2>
-      <button>retail</button>
+      <ul>
+        <li></li>
+      </ul>
+      <img class="postImg" src=""></img>
+      <!-- <button>retail</button> -->
     </div>
   </main>
   <footer>
