styling in progress

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@100&display=swap');
+    </style>
   <script src= script.js defer></script>
   <title>Hair Haven Salon</title>
 </head>
@@ -20,32 +23,65 @@
     </nav>
   </header>
   <main>
-    <div id="#home-div">
-      <h2>HOME</h2>
+    <section id="home-div">
+      <img src="hairHavenLogoBlack.png" alt="salonLogo" class="logo-img">
+    </section>
+
+    <section id="aboutUS-section">
+      <div id="titleBlocksA">
+        <h2>ABOUT US</h2>
+      </div>
+      <div id="aboutBox">
+        <h3>Location:</h3>
+        <p>100 Carl Drive</p>
+        <p>Mancester, NH 03103</p>
+        <h3>Contact Information:</h3>
+        <p>603-836-1137</p>
+      </div>
+    </section>
+
+    <section id="featured-section">
+      <div id="titleBlocks"><h2>TODAY AT HAIR HAVEN</h2></div>
+      <div id="featurePostImage"><img class="postImg" src=""></img></div>
+      <div id="featurePostCaption"><p class="postCap" src=""></p></div>
+    </section>
+
+    <section id="ourWork-div">
+      <div id="titleBlocks"><h2>OUR WORK</h2></div>
+    </section>
+
+    <section id="ourTeam-div">
+      <div id="titleBlocks"><h2>OUR TEAM</h2></div>
+      <div id="teamList">
+        <div><img src="crystalSayerHair.png" alt="crystalSayer" class="teamMember-img"></div>
+        <div><img src="caryannStavrouHair.jpg" alt="caryannStavrou" class="teamMember-img"></div>
+        <div><img src="kellyParadieHair.jpg" alt="kellyParadie" class="teamMember-img"></div>
+        <div><img src="hairByCourtneyKlocek.jpg" alt="courtneyKlocek" class="teamMember-img"></div>
+        <div><img src="zimm.jpg" alt="christineZimmerman" class="teamMember-img"></div>
+        <div><img src="courtneyIrzyk.jpg" alt="courtneyIrzyk" class="teamMember-img"></div>
+        <div><img src="jennaMcNamara.jpg" alt="jennaMcNamara" class="teamMember-img"></div>
+        <div><img src="ashleyPierce.jpg" alt="ashleyPierce" class="teamMember-img"></div>
+        <div><img src="hairByShannonKermel.jpg" alt="shannonKermel" class="teamMember-img"></div>
+      </div>
+    </section>
+
+    <section id="retail-div">
+      <div id="titleBlocks"><h2>RETAIL</h2></div>
+      <div id="retailImageGallery">
+      <div><img src="livingProof1.jpeg" alt="livingProofHairProduct" class="retail-img"></div>
+      <div><img src="livingProof2.jpeg" alt="livingProofHairProduct" class="retail-img"></div>
+      <div><img src="livingProof3.jpeg" alt="livingProofHairProduct" class="retail-img"></div>
     </div>
-    <div id="#aboutUs-div">
-      <h2>ABOUT US</h2>
-    </div>
-    <div id="#ourWork-div">
-      <h2>OUR WORK</h2>
-    </div>
-    <div id="#ourTeam-div">
-      <h2>OUR TEAM</h2>
-    </div>
-    <div id="#retail-div">
-      <h2>RETAIL</h2>
-      <ul>
-        <li></li>
-      </ul>
-      <img class="postImg" src=""></img>
-      <!-- <button>retail</button> -->
-    </div>
+    </section>
+
   </main>
   <footer>
-    <div id="#contactUs-div">
-      <h2>CONTACT US</h2>
+    <section id="contactUs-div">
+      <div id="titleBlocks">
+        <h2>CONTACT US</h2>
+      </div>
       <!-- <button>CONTACT US</button> -->
-    </div>
+    </section>
   </footer>
 </body>
 </html>
