Tuesday Mid Day progress

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div id="aboutBox">
         <h3>Location:</h3>
         <p>100 Carl Drive</p>
-        <p>Mancester, NH 03103</p>
+        <p>Manchester, NH 03103</p>
         <h3>Contact Information:</h3>
         <p>603-836-1137</p>
       </div>
