--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </section>
 
     <section id="aboutUS-section">
-      <div id="titleBlocksA">
+      <div id="titleBlocks">
         <h2>ABOUT US</h2>
       </div>
       <div id="aboutBox">
@@ -41,9 +41,15 @@
     </section>
 
     <section id="featured-section">
-      <div id="titleBlocks"><h2>TODAY AT HAIR HAVEN</h2></div>
-      <div id="featurePostImage"><img class="postImg" src=""></img></div>
-      <div id="featurePostCaption"><p class="postCap" src=""></p></div>
+      <div id="titleBlocks">
+        <h2>TODAY AT HAIR HAVEN</h2>
+      </div>
+      <div id="featurePostImage">
+        <img class="postImg" src=""></img>
+      </div>
+      <div id="featurePostCaption">
+        <p class="postCap" src=""></p>
+      </div>
     </section>
 
     <section id="ourWork-div">
@@ -52,8 +58,8 @@
 
     <section id="ourTeam-div">
       <div id="titleBlocks"><h2>OUR TEAM</h2></div>
+      <div><img src="photos/crystalSayerHair.jpeg" alt="crystalSayer" class="owner-img"></div>
       <div id="teamList">
-        <div><img src="photos/crystalSayerHair.jpeg" alt="crystalSayer" class="teamMember-img"></div>
         <div><img src="photos/caryannStavrouHair.jpg" alt="caryannStavrou" class="teamMember-img"></div>
         <div><img src="photos/kellyParadieHair.jpg" alt="kellyParadie" class="teamMember-img"></div>
         <div><img src="photos/hairByCourtneyKlocek.jpg" alt="courtneyKlocek" class="teamMember-img"></div>
@@ -70,7 +76,7 @@
       <div id="retailImageGallery">
       <div><img src="photos/livingProof1.jpeg" alt="livingProofHairProduct" class="retail-img"></div>
       <div><img src="photos/livingProof2.jpeg" alt="livingProofHairProduct" class="retail-img"></div>
-      <div><img src="photos/livingProof3.jpeg" alt="livingProofHairProduct" class="retail-img"></div>
+      <!-- <div><img src="photos/livingProof3.jpeg" alt="livingProofHairProduct" class="retail-img"></div> -->
     </div>
     </section>
 
