--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <nav>
       <a href="#home-div">Home</a>
       <a href="#aboutUs-div">About Us</a>
-      <a href="#ourWork-div">Our Work</a>
+      <a href="#ourWork-div">Recent Work</a>
       <a href="#ourTeam-div">Our Team</a>
-      <a href="#retail-div">Retail</a>
+      <a href="#retail-div">Available Retail</a>
       <a href="#contactUs-div">Contact Us</a>
     </nav>
   </header>
@@ -47,18 +47,17 @@
       <div id="featurePostImage">
         <img class="postImg" src=""></img>
       </div>
-      <div id="featurePostCaption">
-        <p class="postCap" src=""></p>
-      </div>
     </section>
 
-    <section id="ourWork-div">
-      <div id="titleBlocks"><h2>OUR WORK</h2></div>
+    <section id="ourWork-section">
+      <div id="titleBlocks"><h2>RECENT WORK</h2></div>
+      <div id="ourWork-div">
+      </div>
     </section>
 
     <section id="ourTeam-div">
       <div id="titleBlocks"><h2>OUR TEAM</h2></div>
-      <div><img src="photos/crystalSayerHair.jpeg" alt="crystalSayer" class="owner-img"></div>
+      <div id=owner><img src="photos/crystalSayerHair.jpeg" alt="crystalSayer" class="owner-img"></div>
       <div id="teamList">
         <div><img src="photos/caryannStavrouHair.jpg" alt="caryannStavrou" class="teamMember-img"></div>
         <div><img src="photos/kellyParadieHair.jpg" alt="kellyParadie" class="teamMember-img"></div>
@@ -72,22 +71,22 @@
     </section>
   
     <section id="retail-div">
-      <div id="titleBlocks"><h2>RETAIL</h2></div>
+      <div id="titleBlocks"><h2>AVAILABLE RETAIL</h2></div>
       <div id="retailImageGallery">
       <div><img src="photos/livingProof1.jpeg" alt="livingProofHairProduct" class="retail-img"></div>
       <div><img src="photos/livingProof2.jpeg" alt="livingProofHairProduct" class="retail-img"></div>
       <!-- <div><img src="photos/livingProof3.jpeg" alt="livingProofHairProduct" class="retail-img"></div> -->
     </div>
     </section>
-
-  </main>
-  <footer>
     <section id="contactUs-div">
       <div id="titleBlocks">
         <h2>CONTACT US</h2>
       </div>
       <!-- <button>CONTACT US</button> -->
     </section>
+  </main>
+  <footer>
+
   </footer>
 </body>
 </html>
