--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a href="#ourWork-section">Recent Work</a>
       <a href="#ourTeam-div">Our Team</a>
       <a href="#retail-div">Available Retail</a>
-      <a href="#contactUs-section">Contact Us</a>
+      <a href="#subscribe-section">Behind the Chair</a>
     </nav>
   </header>
   <main>
@@ -57,16 +57,34 @@
 
     <section id="ourTeam-div">
       <div id="titleBlocks"><h2>OUR TEAM</h2></div>
-      <div id=owner><img src="photos/crystalSayerHair.jpeg" alt="crystalSayer" class="owner-img"></div>
+      <div id=owner><a href="https://www.instagram.com/salonhairhaven/">
+        <img src="photos/crystalSayerHair.jpeg" alt="crystalSayer" class="owner-img">
+      </a></div>
       <div id="teamList">
-        <div><img src="photos/caryannStavrouHair.jpg" alt="caryannStavrou" class="teamMember-img"></div>
-        <div><img src="photos/kellyParadieHair.jpg" alt="kellyParadie" class="teamMember-img"></div>
-        <div><img src="photos/hairByCourtneyKlocek.jpg" alt="courtneyKlocek" class="teamMember-img"></div>
-        <div><img src="photos/zimm.jpg" alt="christineZimmerman" class="teamMember-img"></div>
-        <div><img src="photos/courtneyIrzyk.jpg" alt="courtneyIrzyk" class="teamMember-img"></div>
-        <div><img src="photos/jennaMcNamara.jpg" alt="jennaMcNamara" class="teamMember-img"></div>
-        <div><img src="photos/ashleyPierce.jpg" alt="ashleyPierce" class="teamMember-img"></div>
-        <div><img src="photos/hairByShannonKermel.jpg" alt="shannonKermel" class="teamMember-img"></div>
+        <div><a href="https://www.instagram.com/caryannstavrouHair/">
+          <img src="photos/caryannStavrouHair.jpg" alt="caryannStavrou" class="teamMember-img">
+        </a></div>
+        <div><a href="https://www.instagram.com/kellyparadiehair/">
+          <img src="photos/kellyParadieHair.jpg" alt="kellyParadie" class="teamMember-img">
+        </a></div>
+        <div><a href="https://www.instagram.com/hairbycourtney.klocek/">
+          <img src="photos/hairByCourtneyKlocek.jpg" alt="courtneyKlocek" class="teamMember-img">
+        </a></div>
+        <div><a href="https://m.facebook.com/hairbyzimm">
+          <img src="photos/zimm.jpg" alt="christineZimmerman" class="teamMember-img">
+        </a></div>
+        <div><a href="https://www.instagram.com/courtney_irzyk/">
+          <img src="photos/courtneyIrzyk.jpg" alt="courtneyIrzyk" class="teamMember-img">
+        </a></div>
+        <div><a href="https://www.instagram.com/jnna_mcnmra/">
+          <img src="photos/jennaMcNamara.jpg" alt="jennaMcNamara" class="teamMember-img">
+        </a></div>
+        <div><a href="https://www.instagram.com/ashleypierce_hair/">
+          <img src="photos/ashleyPierce.jpg" alt="ashleyPierce" class="teamMember-img">
+        </a></div>
+        <div><a href="https://hairbyshannon.square.site/">
+          <img src="photos/hairByShannonKermel.jpg" alt="shannonKermel" class="teamMember-img">
+        </a></div>
       </div>
     </section>
   
@@ -79,19 +97,16 @@
       <!-- <div><img src="photos/livingProof3.jpeg" alt="livingProofHairProduct" class="retail-img"></div> -->
     </div>
     </section>
-    <section id="contactUs-section">
+    <section id="subscribe-section">
       <div id="titleBlocks">
-        <h2>CONTACT US</h2>
+        <h2>BEHIND THE CHAIR</h2>
       </div>
-      <div id="contactBlock">
-          <form id="contact-form">
-          <input type="text" name="name" placeholder="Your Name" id="userName">
+      <h3>Stay looped in with us!</h3>
+      <div id="subscribeBlock">
+          <form id="subscribe-form">
           <input type="text" name="email" placeholder="Email" id="userEmail">
-          <input type="text" name="phone" placeholder="Phone Number" id="userPhone">
-          <input type="text" name="message" placeholder="Message" id="userMessage">
-          <input type="submit" placeholder="sendMessage" id="formSubmit">
+          <input type="Subscribe" placeholder="Subscribe" id="formSubscribe">
           </form>
-
       </div>
     </section>
   </main>
