--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div id="subscribeBlock">
           <form id="subscribe-form">
           <input type="text" name="email" placeholder="Email" id="userEmail">
-          <input type="Subscribe" placeholder="Subscribe" id="formSubscribe">
+          <input type="submit" placeholder="Subscribe" id="formSubscribe">
           </form>
       </div>
     </section>
