desktop view work

--- a/index.html
+++ b/index.html
@@ -28,20 +28,23 @@
     </section>
 
     <section id="aboutUS-section">
-      <div id="titleBlocks">
+      <div id="titleBlocks_A">
         <h2>ABOUT US</h2>
       </div>
-      <div id="aboutBox">
+      <div id="aboutBox_A">
         <h3>Location:</h3>
         <p>100 Carl Drive</p>
         <p>Manchester, NH 03103</p>
+      </div>
+      <div id="aboutBox_B">
         <h3>Contact Information:</h3>
         <p>603-836-1137</p>
+        <p> </p>
       </div>
     </section>
 
     <section id="featured-section">
-      <div id="titleBlocks">
+      <div id="titleBlocks_A">
         <h2>TODAY AT HAIR HAVEN</h2>
       </div>
       <div id="featurePostImage">
@@ -57,34 +60,16 @@
 
     <section id="ourTeam-div">
       <div id="titleBlocks"><h2>OUR TEAM</h2></div>
-      <div id=owner><a href="https://www.instagram.com/salonhairhaven/">
-        <img src="photos/crystalSayerHair.jpeg" alt="crystalSayer" class="owner-img">
-      </a></div>
       <div id="teamList">
-        <div><a href="https://www.instagram.com/caryannstavrouHair/">
-          <img src="photos/caryannStavrouHair.jpg" alt="caryannStavrou" class="teamMember-img">
-        </a></div>
-        <div><a href="https://www.instagram.com/kellyparadiehair/">
-          <img src="photos/kellyParadieHair.jpg" alt="kellyParadie" class="teamMember-img">
-        </a></div>
-        <div><a href="https://www.instagram.com/hairbycourtney.klocek/">
-          <img src="photos/hairByCourtneyKlocek.jpg" alt="courtneyKlocek" class="teamMember-img">
-        </a></div>
-        <div><a href="https://m.facebook.com/hairbyzimm">
-          <img src="photos/zimm.jpg" alt="christineZimmerman" class="teamMember-img">
-        </a></div>
-        <div><a href="https://www.instagram.com/courtney_irzyk/">
-          <img src="photos/courtneyIrzyk.jpg" alt="courtneyIrzyk" class="teamMember-img">
-        </a></div>
-        <div><a href="https://www.instagram.com/jnna_mcnmra/">
-          <img src="photos/jennaMcNamara.jpg" alt="jennaMcNamara" class="teamMember-img">
-        </a></div>
-        <div><a href="https://www.instagram.com/ashleypierce_hair/">
-          <img src="photos/ashleyPierce.jpg" alt="ashleyPierce" class="teamMember-img">
-        </a></div>
-        <div><a href="https://hairbyshannon.square.site/">
-          <img src="photos/hairByShannonKermel.jpg" alt="shannonKermel" class="teamMember-img">
-        </a></div>
+        <div id=owner><a href="https://www.instagram.com/salonhairhaven/"><img src="photos/crystalSayerHair.jpeg" alt="crystalSayer" class="owner-img"></a></div>
+        <div><a href="https://www.instagram.com/caryannstavrouHair/"><img src="photos/caryannStavrouHair.jpg" alt="caryannStavrou" class="teamMember-img"></a></div>
+        <div><a href="https://www.instagram.com/kellyparadiehair/"><img src="photos/kellyParadieHair.jpg" alt="kellyParadie" class="teamMember-img"></a></div>
+        <div><a href="https://www.instagram.com/hairbycourtney.klocek/"><img src="photos/hairByCourtneyKlocek.jpg" alt="courtneyKlocek" class="teamMember-img"></a></div>
+        <div><a href="https://m.facebook.com/hairbyzimm"><img src="photos/zimm.jpg" alt="christineZimmerman" class="teamMember-img"></a></div>
+        <div><a href="https://www.instagram.com/courtney_irzyk/"><img src="photos/courtneyIrzyk.jpg" alt="courtneyIrzyk" class="teamMember-img"></a></div>
+        <div><a href="https://www.instagram.com/jnna_mcnmra/"><img src="photos/jennaMcNamara.jpg" alt="jennaMcNamara" class="teamMember-img"></a></div>
+        <div><a href="https://www.instagram.com/ashleypierce_hair/"><img src="photos/ashleyPierce.jpg" alt="ashleyPierce" class="teamMember-img"></a></div>
+        <div><a href="https://hairbyshannon.square.site/"><img src="photos/hairByShannonKermel.jpg" alt="shannonKermel" class="teamMember-img"></a></div>
       </div>
     </section>
   
