--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <nav>
-      <a href="#home-div">Home</a>
+      <!-- <a href="#home-div">Home</a> -->
       <a href="#aboutUs-section">About Us</a>
       <a href="#ourWork-section">Recent Work</a>
       <a href="#ourTeam-div">Our Team</a>
@@ -31,6 +31,7 @@
       <div id="titleBlocks_A">
         <h2>ABOUT US</h2>
       </div>
+      <section id="aboutUS-Sub">
       <div id="aboutBox_A">
         <h3>Location:</h3>
         <p>100 Carl Drive</p>
@@ -42,14 +43,17 @@
         <p> </p>
       </div>
     </section>
+    </section>
 
     <section id="featured-section">
       <div id="titleBlocks_A">
         <h2>TODAY AT HAIR HAVEN</h2>
       </div>
+      <section id="featured-subSection">
       <div id="featurePostImage">
         <img class="postImg" src=""></img>
       </div>
+      </section>
     </section>
 
     <section id="ourWork-section">
