--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <section id="ourTeam-div">
       <div id="titleBlocks"><h2>OUR TEAM</h2></div>
       <div id="teamList">
-        <div id=owner><a href="https://www.instagram.com/salonhairhaven/"><img src="photos/crystalSayerHair.jpeg" alt="crystalSayer" class="owner-img"></a></div>
+        <div><a href="https://www.instagram.com/salonhairhaven/"><img src="photos/crystalSayerHair.jpeg" alt="crystalSayer" class="teamMember-img"></a></div>
         <div><a href="https://www.instagram.com/caryannstavrouHair/"><img src="photos/caryannStavrouHair.jpg" alt="caryannStavrou" class="teamMember-img"></a></div>
         <div><a href="https://www.instagram.com/kellyparadiehair/"><img src="photos/kellyParadieHair.jpg" alt="kellyParadie" class="teamMember-img"></a></div>
         <div><a href="https://www.instagram.com/hairbycourtney.klocek/"><img src="photos/hairByCourtneyKlocek.jpg" alt="courtneyKlocek" class="teamMember-img"></a></div>
@@ -92,10 +92,12 @@
       </div>
       <h3>Stay looped in with us!</h3>
       <div id="subscribeBlock">
-          <form id="subscribe-form">
-          <input type="text" name="email" placeholder="Email" id="userEmail">
-          <input type="submit" placeholder="Subscribe" id="formSubscribe">
-          </form>
+        <form id="subscribe-form">
+          <div><input type="text" name="email" placeholder="Email" id="userEmail"></div>
+        </form>
+        <form id="subscribe-form">
+          <div><input type="submit" placeholder="Subscribe" id="formSubscribe"></div>
+        </form>
       </div>
     </section>
   </main>
